packages/ses/test/error/issue-2941/test3/c.js
/* global require */
// eslint-disable-next-line import/no-extraneous-dependencies
require('ses');

try {
  throw Error(`karramba`);
} catch (e) {
  throw Error('que?', { cause: e });
}
